Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignTextObjTextField.quorum
class Main
    Text txt
    action Main
        txt = cast(Text, "text")
        if txt:GetValue() = "text"
            output "passed"
        end
    end
end