Quorum3/Library/Tests/TypeChecker/Fail/ImpAssignBooleanTextObjWrapped.quorum
class main
    action Main
        Text something
        something:setValue("Something!")
        boolean b = something
    end
end